Fix margin on mobile

--- a/src/assets/scss/base/_layout.scss
+++ b/src/assets/scss/base/_layout.scss
@@ -41,7 +41,6 @@
     padding-right: 1em;
   }
   #main {
-    margin-top: 70px;
     margin-bottom: 20px;
   }
 }
